--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-en construction
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Enzorv Dev</title>
+  </head>
+  <body>
+    <a href="https://github.com/enzo-rndrsvt">Github</a>
+    <a href="https://www.linkedin.com/in/enzo-ryndersvitu/">Linkedin</a>
+  </body>
+</html>
