--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enzorv Dev</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <title>Enzo RYNDERS--VITU</title>
   </head>
   <body>
-    <a href="https://github.com/enzo-rndrsvt">Github</a>
-    <a href="https://www.linkedin.com/in/enzo-ryndersvitu/">Linkedin</a>
+    <h1>
+      <i class="fa-solid fa-triangle-exclamation"></i>
+      Site en construction
+      <i class="fa-solid fa-triangle-exclamation"></i>
+    </h1>
+    <a href="https://github.com/enzo-rndrsvt"
+      ><i class="fa-brands fa-github"></i>Github</a
+    >
+    <a href="https://www.linkedin.com/in/enzo-ryndersvitu/"
+      ><i class="fa-brands fa-linkedin"></i>Linkedin</a
+    >
   </body>
 </html>
