--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
       Site en construction
       <i class="fa-solid fa-triangle-exclamation"></i>
     </h1>
-    <a href="https://github.com/enzo-rndrsvt"
+    <a href="https://github.com/enzo-rndrsvt" target="_blank"
       ><i class="fa-brands fa-github"></i>Github</a
     >
-    <a href="https://www.linkedin.com/in/enzo-ryndersvitu/"
+    <a href="https://www.linkedin.com/in/enzo-ryndersvitu/" target="_blank"
       ><i class="fa-brands fa-linkedin"></i>Linkedin</a
     >
   </body>
