--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <title>Enzo RYNDERS--VITU</title>
+    <title>Enzo RYNDERS--VITU | Etudiant en informatique</title>
+    <meta
+      name="description"
+      content="Enzo RYNDERS--VITU, étudiant en 2eme année de BUT informatique"
+    />
   </head>
   <body>
     <h1>
