--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <title>Enzo RYNDERS--VITU | Etudiant en informatique</title>
-    <meta
-      name="description"
-      content="Enzo RYNDERS--VITU, étudiant en 2eme année de BUT informatique"
-    />
+    <link rel="stylesheet" href="styles/style.css" />
+    <title>Enzo RYNDERS-VITU | Étudiant en informatique</title>
   </head>
+  <header>
+    <div>
+      <p>enzorv.dev</p>
+      <div class="header-nav">
+        <a id="apropos">a-propos-de-moi</a>
+        <a id="projets">projets</a>
+        <a id="contactCible">contact</a>
+      </div>
+    </div>
+  </header>
   <body>
-    <h1>
-      <i class="fa-solid fa-triangle-exclamation"></i>
-      Site en construction
-      <i class="fa-solid fa-triangle-exclamation"></i>
-    </h1>
-    <a href="https://github.com/enzo-rndrsvt" target="_blank"
-      ><i class="fa-brands fa-github"></i>Github</a
-    >
-    <a href="https://www.linkedin.com/in/enzo-ryndersvitu/" target="_blank"
-      ><i class="fa-brands fa-linkedin"></i>Linkedin</a
-    >
+    <div id="aproposCible">
+      <div class="text-container">
+        <h2>Enzo RYNDERS--VITU</h2>
+        <p>Étudiant en 2ème année de BUT informatique à l'IUT de Laval</p>
+      </div>
+      <img src="ressources/enzo.JPEG" alt="Enzo RYNDERS--VITU" />
+    </div>
+    <div id="projetsCible"></div>
+    <div id="contactCible"></div>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
