--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Enzo RYNDERS--VITU | Étudiant en informatique">
+    <meta name="description" content="Étudiant en 2ème année de BUT informatique à l'IUT de Laval">
+    <meta name="keywords" content="enzoryndersvitu, enzo rynders vitu, enzo rynders--vitu, enzo rynders-vitu, enzo, enzorv, enzo rv">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="French">
+    <meta name="author" content="Enzo RYNDERS--VITU">
     <link rel="stylesheet" href="styles/style.css" />
-    <title>Enzo RYNDERS-VITU | Étudiant en informatique</title>
+    <title>Enzo RYNDERS--VITU | Étudiant en informatique</title>
   </head>
   <header>
     <div>
