--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta name="title" content="Enzo RYNDERS--VITU | Étudiant en informatique">
     <meta name="description" content="Étudiant en 2ème année de BUT informatique à l'IUT de Laval">
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="French">
     <meta name="author" content="Enzo RYNDERS--VITU">
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css"/>
     <title>Enzo RYNDERS--VITU | Étudiant en informatique</title>
   </head>
   <header>
