--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta name="title" content="Enzo RYNDERS--VITU | Étudiant en informatique">
     <meta name="description" content="Étudiant en 2ème année de BUT informatique à l'IUT de Laval">
     <meta name="keywords" content="enzoryndersvitu, enzo rynders vitu, enzo rynders--vitu, enzo rynders-vitu, enzo, enzorv, enzo rv">
+    <meta property="og:image" content="https://enzorv.dev/ressources/enzo.JPEG">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="French">
     <meta name="author" content="Enzo RYNDERS--VITU">
@@ -28,7 +29,7 @@
         <h2>Enzo RYNDERS--VITU</h2>
         <p>Étudiant en 2ème année de BUT informatique à l'IUT de Laval</p>
       </div>
-      <img src="ressources/enzo.JPEG" alt="Enzo RYNDERS--VITU" />
+      <img src="ressources/enzo.JPEG" alt="Enzo RYNDERS--VITU, étudiant en informatique à l'IUT de Laval" title="Enzo RYNDERS--VITU, étudiant en informatique" />
     </div>
     
 
