--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Enzo RYNDERS--VITU | Étudiant en informatique">
     <meta name="description" content="Étudiant en 2ème année de BUT informatique à l'IUT de Laval">
     <meta name="keywords" content="enzoryndersvitu, enzo rynders vitu, enzo rynders--vitu, enzo rynders-vitu, enzo, enzorv, enzo rv">
