add portfolio page

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Enzo RYNDERS--VITU | Étudiant en informatique">
     <meta name="description" content="Étudiant en 2ème année de BUT informatique à l'IUT de Laval">
-    <meta name="keywords" content="enzoryndersvitu, enzo rynders vitu, enzo rynders--vitu, enzo rynders-vitu, enzo, enzorv, enzo rv">
+    <meta name="news_keywords" content="enzoryndersvitu, enzo rynders vitu, enzo rynders--vitu, enzo rynders-vitu, enzo, enzorv, enzo rv">
     <meta property="og:image" content="https://enzorv.dev/ressources/enzo.JPEG">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="French">
@@ -20,6 +20,7 @@
         <a id="apropos">à-propos-de-moi</a>
         <a id="projets">projets</a>
         <a id="contact">contact</a>
+        <a id="portfolio" href="portfolio" hidden>portfolio</a>
       </div>
     </div>
   </header>
