--- a/public/cv.html
+++ b/public/cv.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css?v=1.3" />
     <title>Mon CV</title>
 </head>
+<header>
+    <div>
+        <a href="/"><p>enzorv.dev</p></a>
+      <div class="header-nav">
+        <a href="/">à-propos-de-moi</a>
+        <a href="/">projets</a>
+        <a href="/">contact</a>
+        <a id="portfolio" href="portfolio.html" hidden>portfolio</a>
+      </div>
+    </div>
+  </header>
 <body>
     <iframe src="./ressources/Enzo_RYNDERSVITU_CV.pdf" width="100%" height="1000px"></iframe>
 </body>
