--- a/public/cv.html
+++ b/public/cv.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css?v=1.3" />
     <title>Mon CV</title>
+    <script>
+      fetch('https://pma.enzorv.dev/track', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+              user_agent: navigator.userAgent,
+              page: window.location.pathname
+          })
+      });
+      </script>
 </head>
 <header>
     <div>
