--- a/public/index.html
+++ b/public/index.html
@@ -2,31 +2,26 @@
 <html lang="fr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="title"
-      content="Enzo RYNDERS--VITU | Étudiant en informatique"
-    />
-    <meta
-      name="description"
-      content="Étudiant en 2ème année de BUT informatique à l'IUT de Laval"
-    />
-    <meta
-      name="news_keywords"
-      content="enzoryndersvitu, enzo rynders vitu, enzo rynders--vitu, enzo rynders-vitu, enzo, enzorv, enzo rv"
-    />
-    <meta
-      property="og:image"
-      content="https://enzorv.dev/ressources/enzo.JPEG"
-    />
+    <meta name="title" content="Enzo RYNDERS--VITU | Étudiant en informatique" />
+    <meta name="description" content="Étudiant en 2ème année de BUT informatique à l'IUT de Laval" />
+    <meta name="news_keywords" content="enzoryndersvitu, enzo rynders vitu, enzo rynders--vitu, enzo rynders-vitu, enzo, enzorv, enzo rv" />
+    <meta property="og:image" content="https://enzorv.dev/ressources/enzo.JPEG"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="French" />
     <meta name="author" content="Enzo RYNDERS--VITU" />
     <link rel="stylesheet" href="styles/style.css?v=1.3" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
     <title>Enzo RYNDERS--VITU | Étudiant en informatique</title>
+    <script>
+      fetch('https://pma.enzorv.dev/track', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+              user_agent: navigator.userAgent,
+              page: window.location.pathname
+          })
+      });
+      </script>
   </head>
   <header>
     <div>
