--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,6 @@
     <link rel="stylesheet" href="styles/style.css?v=1.3" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
     <title>Enzo RYNDERS--VITU | Étudiant en informatique</title>
-    <script>
-      var _paq = window._paq = window._paq || [];
-      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-      _paq.push(['trackPageView']);
-      _paq.push(['enableLinkTracking']);
-      (function() {
-        var u="//stats.enzorv.dev/";
-        _paq.push(['setTrackerUrl', u+'matomo.php']);
-        _paq.push(['setSiteId', '1']);
-        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-        g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-      })();
-    </script>
   </head>
   <header>
     <div>
@@ -33,11 +20,11 @@
         <a id="apropos">à-propos-de-moi</a>
         <a id="projets">projets</a>
         <a id="contact">contact</a>
-        <a id="portfolio" href="portfolio.html" hidden>portfolio</a>
+        <a id="portfolio" href="portfolio.html">portfolio</a>
       </div>
     </div>
   </header>
-  <div class="announcement-banner">
+  <div class="announcement-banner" hidden>
     <p>
       Je recherche un stage en développement informatique du
       <span class="spanDate">7 avril au 27 juin 2025</span>
@@ -144,32 +131,73 @@
         ></path>
       </svg>
     </div>
+
     <div id="projetsCible">
       <h2>Mes Projets</h2>
-      <div class="project-card">
-        <img
-          src="ressources/morpion.png"
-          alt="Image du projet Morpion"
-          class="project-image"
-          onclick="openPreview(this)"
-          title="Cliquez pour agrandir l'image"
-        />
-        <h3>Jeu du morpion</h3>
-        <p>
-          Développement d’un jeu du Morpion (Tic-Tac-Toe) en Java, utilisant
-          JavaFX pour l'interface graphique.
-        </p>
-        <a
-          href="https://github.com/enzo-rndrsvt/Morpion"
-          target="_blank"
-          class="project-link"
-        >
-          <i class="fab fa-github"></i> Voir le projet sur GitHub
-        </a>
-      </div>
+      <div class="project-carousel">
 
-      <div id="lightbox" onclick="closePreview()">
-        <img id="lightbox-img" src="" alt="Image en prévisualisation" />
+        <div class="project-card">
+          <div class="project-header">
+            <img src="ressources/morpion.png" alt="Projet Morpion" class="project-image" onclick="openImage(this)">
+            <div class="project-technologies">
+              <span class="tech-tag" title="JAVA"><i class="fa-brands fa-java"></i></span>
+            </div>
+          </div>
+          <div class="project-content">
+            <h3>Jeu du Morpion</h3>
+            <p>Application pour jouer au jeu du morpion en solo ou à 2 joueurs réalisé dans le cadre de mes études<p>
+            <a href="https://github.com/enzo-rndrsvt/Morpion" class="project-link" target="_blank"><i class="fab fa-github"></i> Voir sur GitHub</a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-header">
+            <img src="ressources/r411race.png" alt="Projet R411 Race" class="project-image" onclick="openImage(this)">
+            <div class="project-technologies">
+              <span class="tech-tag" title="JAVA"><i class="fa-brands fa-java"></i></span>
+              <span class="tech-tag" title="ANDROID (Kotlin)"><i class="fa-brands fa-android"></i></span>
+            </div>
+          </div>
+          <div class="project-content">
+            <h3>R411 Race</h3>
+            <p>Application pour jouer à un jeu de voiture de course à l'aide d'un capteur réalisé dans le cadre de mes études
+
+            </p>
+            <a href="https://github.com/enzo-rndrsvt/r411_race" class="project-link" target="_blank"><i class="fab fa-github"></i> Voir sur GitHub</a>
+          </div>
+        </div>
+        
+        <div class="project-card">
+          <div class="project-header">
+            <img src="ressources/qpui.png" alt="Projet question pour un informaticien" class="project-image" onclick="openImage(this)">
+            <div class="project-technologies">
+              <span class="tech-tag" title="VUEJS"><i class="fa-brands fa-vuejs"></i></span>
+              <span class="tech-tag" title="LESS"><i class="fa-brands fa-less"></i></span>
+            </div>
+          </div>
+          <div class="project-content">
+            <h3>Question Pour Un Informaticien</h3>
+            <p>Application réalisé dans le cadre de Campus En Fête à l'iut de Laval pour l'association Le Studio. Le but est de répondre à une série de 15 questions sur le thème de l'informatique<p>
+            <a href="https://github.com/enzo-rndrsvt/QuestionPourUnInformaticien" class="project-link" target="_blank"><i class="fab fa-github"></i> Voir sur GitHub</a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-header">
+            <img src="ressources/gamecollection.png" alt="Projet game collection" class="project-image" onclick="openImage(this)">
+            <div class="project-technologies">
+              <span class="tech-tag" title="HTML5"><i class="fa-brands fa-html5"></i></span>
+              <span class="tech-tag" title="CSS3"><i class="fa-brands fa-css3"></i></span>
+              <span class="tech-tag" title="PHP"><i class="fa-brands fa-php"></i></span>
+            </div>
+          </div>
+          <div class="project-content">
+            <h3>Game Collection</h3>
+            <p>Application de gestion d'une bibliothèque de jeu partagé avec un système de compte et de sauvegarde réalisé dans le cadre de mes études<p>
+            <a href="https://github.com/enzo-rndrsvt/game-collection" class="project-link" target="_blank"><i class="fab fa-github"></i> Voir sur GitHub</a>
+          </div>
+        </div>
+
       </div>
     </div>
 
