remove portfolio page from header

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <a id="apropos">à-propos-de-moi</a>
         <a id="projets">projets</a>
         <a id="contact">contact</a>
-        <a id="portfolio" href="portfolio.html">portfolio</a>
+        <a id="portfolio" href="portfolio.html" hidden>portfolio</a>
       </div>
     </div>
   </header>
