start new portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <a id="apropos">à-propos-de-moi</a>
         <a id="projets">projets</a>
         <a id="contact">contact</a>
-        <a id="portfolio" href="portfolio.html" hidden>portfolio</a>
+        <a id="portfolio" href="portfolio.html" >portfolio</a>
       </div>
     </div>
   </header>
@@ -72,6 +72,7 @@
           <h4>Baccalauréat STI2D</h4>
           <span class="date">2020 - 2023</span>
           <p>Option Systèmes d’Information et Numérique (SIN)</p>
+          <div class="location-pin"><i class="fas fa-map-marker-alt"></i>Lycée Jean Guéhenno - Fougères</div>
         </div>
       </div>
 
@@ -79,10 +80,8 @@
         <div class="bubble-content">
           <h4>IUT Informatique</h4>
           <span class="date">2023 - 2025</span>
-          <p>
-            2ème année de BUT informatique, spécialisation en développement
-            d’applications
-          </p>
+          <p>2ème année de BUT informatique, spécialisation en développementd’applications</p>
+          <div class="location-pin"><i class="fas fa-map-marker-alt">IUT de Laval</i></div>
         </div>
       </div>
     </div>
@@ -95,6 +94,7 @@
           <h4>Stage</h4>
           <span class="date">Fev - 2020</span>
           <p>Stage d’observation à L’UBO Open Factory de Brest</p>
+          <div class="location-pin"><i class="fas fa-map-marker-alt">UBO Open Factory - Brest</i></div>
         </div>
       </div>
 
@@ -103,6 +103,7 @@
           <h4>Jobs d'été</h4>
           <span class="date">Été 2022</span>
           <p>Saisonnier dans une ferme maraîchère</p>
+          <div class="location-pin"><i class="fas fa-map-marker-alt"></i>La ferme de Keredern - Trédarzec</div>
         </div>
       </div>
 
@@ -111,16 +112,30 @@
           <h4>Jobs d'été</h4>
           <span class="date">Été 2023</span>
           <p>Saisonnier en grande distribution</p>
+          <div class="location-pin"><i class="fas fa-map-marker-alt"></i>Super U -Tréguier</div>
         </div>
       </div>
+
 
       <div class="timeline-bubble">
         <div class="bubble-content">
           <h4>Jobs d'été</h4>
           <span class="date">Été 2024</span>
           <p>Saisonnier en grande distribution</p>
+          <div class="location-pin"><i class="fas fa-map-marker-alt"></i>Super U - Tréguier</div>
         </div>
       </div>
+
+      <div class="timeline-bubble">
+        <div class="bubble-content">
+          <h4>Stage</h4>
+          <span class="date">Avril - Juin 2025</span>
+          <p>Stage de développement d'applications MAP chez Airbus Atlantic</p>
+          <div class="location-pin"><i class="fas fa-map-marker-alt"></i>Airbus Atlantic - Montoir-de-Bretagne</div>
+        </div>
+      </div>
+
+
     </div>
     <div class="svg-separator1">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -251,7 +266,7 @@
 
   <footer id="siteFooter">
     <div class="footer-container">
-      <p>&copy; 2024 Enzo Rynders-Vitu | Tous droits réservés</p>
+      <p>&copy; 2025 Enzo Rynders-Vitu | Tous droits réservés</p>
       <div class="footer-links">
         <a href="https://github.com/enzo-rndrsvt" target="_blank">
           <i class="fab fa-github"></i>
