--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -187,7 +187,7 @@
         <p>
           Utilisation de tests lors de la programmation de site avec php symfony
         </p>
-        <img src="./ressources/portfolio/test.png" alt="" width="50%">
+        <img src="./ressources/portfolio/test.png" alt="" width="50%" />
       </div>
 
       <!-- Compétence 2 -->
@@ -330,7 +330,7 @@
           Utilisation de cryptage des données pour sécuriser les entrées de
           champs
         </p>
-        <img src="./ressources/portfolio/secur_donnees.png" alt="">
+        <img src="./ressources/portfolio/secur_donnees.png" alt="" />
 
         <h2>
           AC 4 - Évaluer l’impact environnemental et sociétal des solutions
@@ -498,7 +498,7 @@
           Utilisation non systématique des methodes de cryptage, mais sait les
           implémenter
         </p>
-        <img src="./ressources/portfolio/vernam.png" alt="">
+        <img src="./ressources/portfolio/vernam.png" alt="" />
       </div>
 
       <!-- Compétence 4 -->
@@ -545,7 +545,7 @@
           Utilisation régulière de MongoDB, pour des projets personnels, comme
           pour des projet à l'iut
         </p>
-        <img src="./ressources/portfolio/neo4j.png" alt="" width="60%">
+        <img src="./ressources/portfolio/neo4j.png" alt="" width="60%" />
         <h2>
           AC 2 - Assurer la confidentialité des données (intégrité et sécurité)
         </h2>
@@ -587,7 +587,12 @@
         </div>
         <br />
         <p>Je sais faire la difféence entre les données</p>
-        <img src="ressources/portfolio/rgpd.jpg" alt="" class="img" width="20%">
+        <img
+          src="ressources/portfolio/rgpd.jpg"
+          alt=""
+          class="img"
+          width="20%"
+        />
 
         <h2>
           AC 3 - Organiser la restitution de données à travers la programmation
@@ -1105,11 +1110,6 @@
             standards de qualité logicielle.
           </li>
         </ul>
-      </div>
-
-      <div class="page" id="page9">
-        <h1></h1>
-        <p>Au cas ou</p>
       </div>
     </div>
     <script src="scripts/script_portfolio.js"></script>
