--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,30 @@
 <html lang="fr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="Enzo RYNDERS--VITU | Étudiant en informatique" />
-    <meta name="description" content="Étudiant en 2ème année de BUT informatique à l'IUT de Laval" />
-    <meta name="news_keywords" content="enzoryndersvitu, enzo rynders vitu, enzo rynders--vitu, enzo rynders-vitu, enzo, enzorv, enzo rv" />
-    <meta property="og:image" content="https://enzorv.dev/ressources/enzo.JPEG"/>
+    <meta
+      name="title"
+      content="Enzo RYNDERS--VITU | Étudiant en informatique"
+    />
+    <meta
+      name="description"
+      content="Étudiant en 2ème année de BUT informatique à l'IUT de Laval"
+    />
+    <meta
+      name="news_keywords"
+      content="enzoryndersvitu, enzo rynders vitu, enzo rynders--vitu, enzo rynders-vitu, enzo, enzorv, enzo rv"
+    />
+    <meta
+      property="og:image"
+      content="https://enzorv.dev/ressources/enzo.JPEG"
+    />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="French" />
     <meta name="author" content="Enzo RYNDERS--VITU" />
     <link rel="stylesheet" href="styles/style.css?v=1.5" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <title>Enzo RYNDERS--VITU | Étudiant en informatique</title>
   </head>
   <header>
@@ -72,7 +87,9 @@
           <h4>Baccalauréat STI2D</h4>
           <span class="date">2020 - 2023</span>
           <p>Option Systèmes d’Information et Numérique (SIN)</p>
-          <div class="location-pin"><i class="fas fa-map-marker-alt"></i>Lycée Jean Guéhenno - Fougères</div>
+          <div class="location-pin">
+            <i class="fas fa-map-marker-alt"></i>Lycée Jean Guéhenno - Fougères
+          </div>
         </div>
       </div>
 
@@ -80,8 +97,13 @@
         <div class="bubble-content">
           <h4>IUT Informatique</h4>
           <span class="date">2023 - 2025</span>
-          <p>2ème année de BUT informatique, spécialisation en développementd’applications</p>
-          <div class="location-pin"><i class="fas fa-map-marker-alt">IUT de Laval</i></div>
+          <p>
+            2ème année de BUT informatique, spécialisation en
+            développementd’applications
+          </p>
+          <div class="location-pin">
+            <i class="fas fa-map-marker-alt">IUT de Laval</i>
+          </div>
         </div>
       </div>
     </div>
@@ -94,7 +116,9 @@
           <h4>Stage</h4>
           <span class="date">Fev - 2020</span>
           <p>Stage d’observation à L’UBO Open Factory de Brest</p>
-          <div class="location-pin"><i class="fas fa-map-marker-alt">UBO Open Factory - Brest</i></div>
+          <div class="location-pin">
+            <i class="fas fa-map-marker-alt">UBO Open Factory - Brest</i>
+          </div>
         </div>
       </div>
 
@@ -103,7 +127,10 @@
           <h4>Jobs d'été</h4>
           <span class="date">Été 2022</span>
           <p>Saisonnier dans une ferme maraîchère</p>
-          <div class="location-pin"><i class="fas fa-map-marker-alt"></i>La ferme de Keredern - Trédarzec</div>
+          <div class="location-pin">
+            <i class="fas fa-map-marker-alt"></i>La ferme de Keredern -
+            Trédarzec
+          </div>
         </div>
       </div>
 
@@ -112,17 +139,20 @@
           <h4>Jobs d'été</h4>
           <span class="date">Été 2023</span>
           <p>Saisonnier en grande distribution</p>
-          <div class="location-pin"><i class="fas fa-map-marker-alt"></i>Super U -Tréguier</div>
+          <div class="location-pin">
+            <i class="fas fa-map-marker-alt"></i>Super U -Tréguier
+          </div>
         </div>
       </div>
-
 
       <div class="timeline-bubble">
         <div class="bubble-content">
           <h4>Jobs d'été</h4>
           <span class="date">Été 2024</span>
           <p>Saisonnier en grande distribution</p>
-          <div class="location-pin"><i class="fas fa-map-marker-alt"></i>Super U - Tréguier</div>
+          <div class="location-pin">
+            <i class="fas fa-map-marker-alt"></i>Super U - Tréguier
+          </div>
         </div>
       </div>
 
@@ -131,10 +161,12 @@
           <h4>Stage</h4>
           <span class="date">Avril - Juin 2025</span>
           <p>Stage de développement d'applications MAP chez Airbus Atlantic</p>
-          <div class="location-pin"><i class="fas fa-map-marker-alt"></i>Airbus Atlantic - Montoir-de-Bretagne</div>
+          <div class="location-pin">
+            <i class="fas fa-map-marker-alt"></i>Airbus Atlantic -
+            Montoir-de-Bretagne
+          </div>
         </div>
       </div>
-
     </div>
     <div class="svg-separator1">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -149,69 +181,141 @@
     <div id="projetsCible">
       <h2>Mes Projets</h2>
       <div class="project-carousel">
-
         <div class="project-card">
           <div class="project-header">
-            <img src="ressources/morpion.png" alt="Projet Morpion" class="project-image" onclick="openImage(this)">
+            <img
+              src="ressources/morpion.png"
+              alt="Projet Morpion"
+              class="project-image"
+              onclick="openImage(this)"
+            />
             <div class="project-technologies">
-              <span class="tech-tag" title="JAVA"><i class="fa-brands fa-java"></i></span>
+              <span class="tech-tag" title="JAVA"
+                ><i class="fa-brands fa-java"></i
+              ></span>
             </div>
           </div>
           <div class="project-content">
             <h3>Jeu du Morpion</h3>
-            <p>Application pour jouer au jeu du morpion en solo ou à 2 joueurs réalisé dans le cadre de mes études<p>
-            <a href="https://github.com/enzo-rndrsvt/Morpion" class="project-link" target="_blank"><i class="fab fa-github"></i> Voir sur GitHub</a>
+            <p>
+              Application pour jouer au jeu du morpion en solo ou à 2 joueurs
+              réalisé dans le cadre de mes études
+            </p>
+            <p>
+              <a
+                href="https://github.com/enzo-rndrsvt/Morpion"
+                class="project-link"
+                target="_blank"
+                ><i class="fab fa-github"></i> Voir sur GitHub</a
+              >
+            </p>
           </div>
         </div>
 
         <div class="project-card">
           <div class="project-header">
-            <img src="ressources/r411race.png" alt="Projet R411 Race" class="project-image" onclick="openImage(this)">
+            <img
+              src="ressources/r411race.png"
+              alt="Projet R411 Race"
+              class="project-image"
+              onclick="openImage(this)"
+            />
             <div class="project-technologies">
-              <span class="tech-tag" title="JAVA"><i class="fa-brands fa-java"></i></span>
-              <span class="tech-tag" title="ANDROID (Kotlin)"><i class="fa-brands fa-android"></i></span>
+              <span class="tech-tag" title="JAVA"
+                ><i class="fa-brands fa-java"></i
+              ></span>
+              <span class="tech-tag" title="ANDROID (Kotlin)"
+                ><i class="fa-brands fa-android"></i
+              ></span>
             </div>
           </div>
           <div class="project-content">
             <h3>R411 Race</h3>
-            <p>Application pour jouer à un jeu de voiture de course à l'aide d'un capteur réalisé dans le cadre de mes études
-
+            <p>
+              Application pour jouer à un jeu de voiture de course à l'aide d'un
+              capteur réalisé dans le cadre de mes études
             </p>
-            <a href="https://github.com/enzo-rndrsvt/r411_race" class="project-link" target="_blank"><i class="fab fa-github"></i> Voir sur GitHub</a>
+            <a
+              href="https://github.com/enzo-rndrsvt/r411_race"
+              class="project-link"
+              target="_blank"
+              ><i class="fab fa-github"></i> Voir sur GitHub</a
+            >
           </div>
         </div>
-        
+
         <div class="project-card">
           <div class="project-header">
-            <img src="ressources/qpui.png" alt="Projet question pour un informaticien" class="project-image" onclick="openImage(this)">
+            <img
+              src="ressources/qpui.png"
+              alt="Projet question pour un informaticien"
+              class="project-image"
+              onclick="openImage(this)"
+            />
             <div class="project-technologies">
-              <span class="tech-tag" title="VUEJS"><i class="fa-brands fa-vuejs"></i></span>
-              <span class="tech-tag" title="LESS"><i class="fa-brands fa-less"></i></span>
+              <span class="tech-tag" title="VUEJS"
+                ><i class="fa-brands fa-vuejs"></i
+              ></span>
+              <span class="tech-tag" title="LESS"
+                ><i class="fa-brands fa-less"></i
+              ></span>
             </div>
           </div>
           <div class="project-content">
             <h3>Question Pour Un Informaticien</h3>
-            <p>Application réalisé dans le cadre de Campus En Fête à l'iut de Laval pour l'association Le Studio. Le but est de répondre à une série de 15 questions sur le thème de l'informatique<p>
-            <a href="https://github.com/enzo-rndrsvt/QuestionPourUnInformaticien" class="project-link" target="_blank"><i class="fab fa-github"></i> Voir sur GitHub</a>
+            <p>
+              Application réalisé dans le cadre de Campus En Fête à l'iut de
+              Laval pour l'association Le Studio. Le but est de répondre à une
+              série de 15 questions sur le thème de l'informatique
+            </p>
+            <p>
+              <a
+                href="https://github.com/enzo-rndrsvt/QuestionPourUnInformaticien"
+                class="project-link"
+                target="_blank"
+                ><i class="fab fa-github"></i> Voir sur GitHub</a
+              >
+            </p>
           </div>
         </div>
 
         <div class="project-card">
           <div class="project-header">
-            <img src="ressources/gamecollection.png" alt="Projet game collection" class="project-image" onclick="openImage(this)">
+            <img
+              src="ressources/gamecollection.png"
+              alt="Projet game collection"
+              class="project-image"
+              onclick="openImage(this)"
+            />
             <div class="project-technologies">
-              <span class="tech-tag" title="HTML5"><i class="fa-brands fa-html5"></i></span>
-              <span class="tech-tag" title="CSS3"><i class="fa-brands fa-css3"></i></span>
-              <span class="tech-tag" title="PHP"><i class="fa-brands fa-php"></i></span>
+              <span class="tech-tag" title="HTML5"
+                ><i class="fa-brands fa-html5"></i
+              ></span>
+              <span class="tech-tag" title="CSS3"
+                ><i class="fa-brands fa-css3"></i
+              ></span>
+              <span class="tech-tag" title="PHP"
+                ><i class="fa-brands fa-php"></i
+              ></span>
             </div>
           </div>
           <div class="project-content">
             <h3>Game Collection</h3>
-            <p>Application de gestion d'une bibliothèque de jeu partagé avec un système de compte et de sauvegarde réalisé dans le cadre de mes études<p>
-            <a href="https://github.com/enzo-rndrsvt/game-collection" class="project-link" target="_blank"><i class="fab fa-github"></i> Voir sur GitHub</a>
+            <p>
+              Application de gestion d'une bibliothèque de jeu partagé avec un
+              système de compte et de sauvegarde réalisé dans le cadre de mes
+              études
+            </p>
+            <p>
+              <a
+                href="https://github.com/enzo-rndrsvt/game-collection"
+                class="project-link"
+                target="_blank"
+                ><i class="fab fa-github"></i> Voir sur GitHub</a
+              >
+            </p>
           </div>
         </div>
-
       </div>
     </div>
 
